fixed issue of the letter y cutting off on home page sliders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2479,6 +2479,8 @@
 	margin-bottom:25px;
 	color: var(--color-four);
 	text-transform: capitalize;
+	  line-height: 1.3;   /* give enough room for descenders */
+  overflow: visible;  /* allow the bottom of letters to show */
 
 	transition:all 900ms ease;
 	-moz-transition:all 900ms ease;
